<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="yes">Yes</string>
  <string name="no">No</string>

  <string name="app_name">My Gigglebyte</string>
  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="newUserDescription">I\'m new here</string>
  <string name="action_follow">Follow user</string>
  <string name="action_unfollow">Unfollow User</string>

  <string name="following">Following</string>
  <string name="followers">Followers</string>
  <string name="follower">Follower</string>
  <string name="follow">Follow</string>
  <string name="unfollowing">Not following</string>
  <string name="wait">Please wait…</string>
  <string name="upvoted">Upvoted</string>
  <string name="favourites">Added to favourites</string>
  <string name="started_following">started following</string>
  <string name="started_following_you">started following you</string>
  <string name="liked_post">liked this</string>
  <string name="commented_on">commented on</string>
  <string name="mentioned_on">mentioned you in a comment on this post</string>

  <string name="comment">Comment</string>
  <string name="comments">Comments</string>
  <string name="likes">Likes</string>
  <string name="like">Like</string>
  <string name="unknown">Unknown</string>
  <string name="search">Search</string>
  <string name="save">Save</string>
  <string name="edit">Edit</string>
  <string name="search_users">Search Users</string>
  <string name="search_tags">Search Tags</string>
  <string name="add_image">Add Image</string>
  <string name="add_comment">Add Comment</string>
  <string name="posts">Posts</string>
  <string name="post">Post</string>
  <string name="gallery">Gallery</string>
  <string name="take_a_photo">Take A Photo</string>
  <string name="view_profile">View Profile</string>
  <string name="view_comments">View Comments</string>
  <string name="edit_username">Edit Username</string>
  <string name="edit_description">Edit Description</string>
  <string name="save_post">Save Post</string>
  <string name="unfavourite_post">Unfavourite Post</string>
  <string name="write_something">Write Something</string>
  <string name="add_tags">Add Tags</string>
  <string name="flag">Flag Inappropriate</string>
  <string name="edit_post">Edit</string>
  <string name="delete_post">Delete</string>
  <string name="edit_comment">Edit</string>
  <string name="delete_comment">Delete</string>

  <string name="tab_profile">PROFILE</string>
  <string name="tab_details">DETAILS</string>
  <string name="tab_notifications">NOTIFICATIONS</string>
  <string name="tab_feed">FEED</string>
  <string name="tab_tags">TAGS</string>
  <string name="tab_users">USERS</string>
  <string name="tab_new">NEW</string>
  <string name="tab_hot">HOT</string>
  <string name="tab_favourite">FAVOURITE</string>
  <string name="tab_search">SEARCH</string>
  <string name="tab_posts">POSTS</string>

  <string name="menu_change_picture">Change Picture</string>
  <string name="menu_add_post">Add Post</string>
  <string name="menu_add_image">Add Image</string>
  <string name="menu_edit_profile">Edit Profile</string>
  <string name="menu_edit_username">Edit Username</string>
  <string name="menu_edit_description">Edit Description</string>
  <string name="menu_add_comment">Add Comment</string>

  <string name="info_follow">Follow users to view their posts in your feed.</string>
  <string name="info_like">With a high enough upvotes your post will feature on the Hot list.</string>
  <string name="info_favourite">Saved posts will be stored here to view later.</string>
  <string name="info_add_post">Post often to get followers.</string>

  <string name="confirm_post_delete">Are you sure you want to delete your post?</string>
  <string name="confirm_comment_delete">Are you sure you want to delete your comment?</string>
  <string name="comment_deleted">Comment Deleted</string>
  <string name="post_deleted">Post Deleted</string>
  <string name="comment_flagged">Comment Flagged</string>
  <string name="post_flagged">Post Flagged</string>
  <string name="changed">Changed</string>
  <string name="confirm_post_flag">Thank you for maintaining the quality of Gigglebyte. Are you sure you want to flag this post?</string>
  <string name="confirm_comment_flag">Thank you for maintaining the quality of Gigglebyte. Are you sure you want to flag this comment?</string>

  <string name="loadMessage0">PRO TIP: You can save posts to view later.</string>
  <string name="loadMessage1">HINT: Saved posts are only viewable by you.</string>
  <string name="loadMessage2">PRO TIP: Post often to keep your followers interested.</string>
  <string name="loadMessage3">PRO TIP: The more people you follow, the more interesting your feed will be.</string>
  <string name="loadMessage4">HINT: Upvoting a post weeds out the hot posts from the...well cold posts</string>
  <string name="loadMessage5">This app is made by one person, if you have a suggestion just ask.</string>
  <string name="loadMessage6">PRO TIP: Don’t be a jerk to others.</string>
  <string name="loadMessage7">PRO TIP: You can mention others in comments with @</string>
  <string name="loadMessage8">PRO TIP: Adding a tag to your post will make it easier to filter</string>
  <string name="loadMessage9">This community is still small, please help it grow.</string>
  <string name="loadMessage10">LIFE HACK: Don\'t neglect loved ones for memes.</string>
  <string name="loadMessage11">Never gonna give you up, never gonna let you down, never gonna run around and desert you.</string>
  <string name="loadMessage12">Like a boss.</string>
  <string name="loadMessage13">That\'s not how this works, that\'s not how any of this works!</string>
  <string name="loadMessage14">Flipping tables</string>
  <string name="loadMessage15">Twiddling thumbs</string>
  <string name="loadMessage16">Browsing the web</string>
  <string name="loadMessage17">Look, I am your father</string>
  <string name="loadMessage18">PRO TIP: Don\'t feed the troll.</string>
  <string name="loadMessage19">LIFE HACK: Remember to put your phone away when out in public.</string>
  <string name="loadMessage20">Please flag posts that are inappropriate in order to keep the content good.</string>
  <string name="loadMessage21">Check in often to see updates to the app</string>
  <string name="loadMessage22">Always speak up, we are listening</string>
  <string name="loadMessage23">Generic loading message</string>
  <string name="loadMessage24">Letting the dogs out</string>
  <string name="loadMessage25">Wait for it...</string>
  <string name="loadMessage26">Keep things clean</string>
  <string name="loadMessage27">Loading content</string>
  <string name="loadMessage28">Does Anyone Actually Read This?</string>
  <string name="loadMessage29">Hey man, you see that guy over there?</string>
  <string name="loadMessage30">Cool story bro</string>
  <string name="loadMessage31">Generating typos</string>
  <string name="loadMessage32">Banana for scale</string>
  <string name="loadMessage33">The cake is lying</string>
  <string name="loadMessage34">Fly you fools</string>
  <string name="loadMessage35">Barrens chat: LFG WC</string>
  <string name="loadMessage36">Tapping lands for mana</string>
  <string name="loadMessage37">Quick Scope</string>
  <string name="loadMessage38">The first rule of Fight club is… mmffurrg</string>
  <string name="loadMessage39">Reposting generic post</string>
  <string name="loadMessage40">GG ez</string>
  <string name="loadMessage41">Pushing my luck</string>
</resources>
