<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#9e9c9f"
    android:gravity="center"
    android:padding="4dp"
    android:orientation="vertical">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/main_black"
      android:gravity="center"
      android:orientation="vertical"
      android:paddingBottom="10dp">

    <EditText
        android:id="@+id/postText"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:inputType="textMultiLine"
        android:textColor="@color/white"
        android:textColorHint="@color/silver"
        android:maxLength="300"
        android:gravity="top"
        android:hint="@string/write_something"
        android:ems="10" >
      <requestFocus/>
    </EditText>

    <EditText
        android:id="@+id/tagText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:textColorHint="@color/silver"
        android:gravity="top"
        android:hint="@string/add_tags"
        android:ems="10" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_black"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

      <TextView
          android:id="@+id/countTextView"
          android:layout_marginStart="2dip"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="300/300"
          android:textColor="@color/white"
          android:textSize="20sp"
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:layout_weight="1"/>

  <Button
      android:id="@+id/button1"
      android:layout_width="90dp"
      android:layout_marginEnd="8dp"
      android:layout_gravity="end"
      android:textColor="@color/white"
      android:layout_height="wrap_content"
      android:background="@drawable/button_selector"
      android:text="@string/post"/>
    </LinearLayout>
  </LinearLayout>
</LinearLayout>