<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="4dp"
    android:orientation="vertical">

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:background="@color/main_black"
      android:gravity="center"
      android:orientation="vertical"
      android:padding="10dp"
      android:paddingLeft="40dp"
      android:paddingRight="40dp">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="top">

      <FrameLayout
          android:id="@+id/frame"
          android:layout_width="40dp"
          android:layout_height="40dp">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:src="@drawable/nobody_m"/>

        <ImageView
            android:id="@+id/circle_crop"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/circle_crop"/>

      </FrameLayout>

      <LinearLayout
          xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

        <TextView
            android:id="@+id/postText"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="start"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/main_black"
            android:maxLines="4"
            android:minLines="1"
            android:ellipsize="end"/>

      </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/buttonProfileView"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:padding="4dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_height="30dp"
        android:background="@drawable/button_selector"
        android:text="@string/view_profile"/>
    <Button
        android:id="@+id/buttonCommentsView"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:padding="4dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_height="30dp"
        android:background="@drawable/button_selector"
        android:text="@string/view_comments"/>
    <Button
        android:id="@+id/buttonFlag"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:padding="4dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_height="30dp"
        android:background="@drawable/button_selector"
        android:text="@string/flag"/>
  </LinearLayout>
</LinearLayout>