<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swipe"
    android:background="@color/main_black">
  <RelativeLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:fab="http://schemas.android.com/apk/res-auto"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:orientation="vertical"
      android:padding="2dp"
      android:background="@color/main_black">

    <RelativeLayout
        android:id="@+id/topPanel"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center_vertical">

      <TextView
          android:id="@+id/userName"
          android:layout_marginStart="2dip"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          android:textSize="20sp"
          android:textAppearance="?android:attr/textAppearanceLarge"
      />
    </RelativeLayout>

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_below="@+id/topPanel"/>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:elevation="6dp"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true"
        fab:menu_fab_size="mini"
        fab:menu_openDirection="down"
        fab:menu_icon="@drawable/ic_edit"
        fab:menu_colorNormal="@color/app_primary_dark"
        fab:menu_colorPressed="@color/app_primary"
        fab:menu_colorRipple="@color/app_primary_dark">

      <com.github.clans.fab.FloatingActionButton
          android:id="@+id/changePictureFab"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/ic_edit"
          fab:fab_size="mini"
          fab:fab_label="@string/menu_change_picture"
          fab:fab_colorNormal="@color/app_primary_dark"
          fab:fab_colorPressed="@color/app_primary"
          fab:fab_colorRipple="@color/app_primary_dark"/>

      <com.github.clans.fab.FloatingActionButton
          android:id="@+id/changeDescriptionFab"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/ic_edit"
          fab:fab_size="mini"
          fab:fab_label="@string/menu_edit_description"
          fab:fab_colorNormal="@color/app_primary_dark"
          fab:fab_colorPressed="@color/app_primary"
          fab:fab_colorRipple="@color/app_primary_dark"/>

      <com.github.clans.fab.FloatingActionButton
          android:id="@+id/changeNameFab"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/ic_edit"
          fab:fab_size="mini"
          fab:fab_label="@string/menu_edit_username"
          fab:fab_colorNormal="@color/app_primary_dark"
          fab:fab_colorPressed="@color/app_primary"
          fab:fab_colorRipple="@color/app_primary_dark"/>
    </com.github.clans.fab.FloatingActionMenu>
  </RelativeLayout>
</android.support.v4.widget.SwipeRefreshLayout>
